# LSMS_Library

./: .envrc  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  Albania  Armenia  Azerbaijan  Benin  Bosnia-Herzegovina  Brazil  Bulgaria  Burkina_Faso  CLAUDE.md  CONTRIBUTING.org  Cambodia  China  CotedIvoire  Ethiopia  EthiopiaRHS  GhanaLSS  GhanaSPS  Guatemala  Guinea-Bissau  Guyana  INSTALL.org  India  Iraq  Kazakhstan  Kosovo  Kyrgyz Republic  Liberia  Makefile  Malawi  Mali  Nepal  Nicaragua  Niger  Nigeria  Pakistan  (+29 more)
.coder/: charter-coverage-matrix.md
.dvc/: config
Ethiopia/: Derived without CP.webloc
SkunkWorks/: YAML_TAGS_PROPOSAL.md  build_transform_cache_hash.org  configurable_data_cache.org  cross_country_label_harmonization.org  dvc_object_management.org  dvc_writer_distribution.org  dvcfilesystem_runtime_override.org  except_exception_audit.md  grain_aggregation_policy.org  malawi_unit_resolution_diagnostic_2026-05-07.org  publish.org  test_list_based_tags.py  test_tag_as_name.py  test_tag_as_name_final.py  test_yaml_tags.py  yaml_tags_implementation.py  yaml_tags_prototype.py
_/: Makefile  README.org  __init__.py  ai_agent.py  categorical_mapping_helper.py  contributing.org  country.py  country_faye.py  data_info.yml  demands.py  harmony.py  label_ai.py  local_tools.py  transformations.py
bench/: build_feature.py  matrix.py  matrix_aggregate.py  run_bench.sh
docs/: contributing.md  getting-started.md  index.md  savio_venv.md
docs_hooks/: coverage_matrix.py
examples/: tanzania_demo.py  uganda_2019_20_comparison.yml
lsms_library/: ISSUES.md  Makefile  README.org  __init__.py  _build_registry.py  build_transforms.py  calendars.py  capability.py  catalog.py  catalog_relations.py  catalog_relations.yml  cli.py  config.py  conversion.py  country.py  coverage_matrix.py  currency.py  data_access.py  data_info.yml  demands.py  diagnostics.py  dvc_permissions.py  errors.py  feature.py  local_tools.py  paths.py  provenance.py  transformations.py  yaml_utils.py
scripts/: backfill_wave_provenance.py  dvc_writer
slurm_logs/: 2026-05-08_pr_triage_session.md  2026-06-08_backlog_sweep_handoff.org  DESIGN_218_food_legacy_retirement.org  DESIGN_coverage_discipline_2026-07-11.org  DESIGN_currency_conversion_2026-06-17.org  DESIGN_dvc_layer1_caching.md  DESIGN_erhs_plot_features_2026-05-20.org  DESIGN_ethiopiarhs_wave_recipe_2026-05-18.org  DESIGN_food_acquired_canonical_2026-05-05.org  DESIGN_food_expenditures_basis_kwarg.org  DESIGN_food_prices_units_kwarg_2026-05-06.org  DESIGN_ghanalss_food_acquired_2026-06-15.org  DESIGN_grain_collapse_sites_2026-07-13.org  DESIGN_lsms_plus_individual_disaggregation_2026-06-14.org  DESIGN_per_row_kg_quantity_2026-06-07.org  DESIGN_plot_features_cross_country_workflow_2026-06-03.org  DESIGN_population_record_2026-07-12.org  DESIGN_s3_write_creds_2026-05-18.org  DESIGN_sample_as_v_source.org  DESIGN_u_consolidation_2026-06-07.org  HANDOFF_2026-04-01.org  HANDOFF_2026-04-09.org  HANDOFF_2026-04-10.org  HANDOFF_2026-04-11_afternoon.org  HANDOFF_2026-04-14_evening.org  HANDOFF_2026-04-15.org  HANDOFF_2026-04-28.org  HANDOFF_2026-05-06.org  HANDOFF_2026-05-07.org  HANDOFF_2026-05-19.org  HANDOFF_2026-05-19_appendix_build_blockers.org  HANDOFF_2026-07-22.org  INVESTIGATION_bfa_roster_dup.org  NOTES_project_naming_and_positioning.org  OUTLINE_paper_bsd.org  PLAN_backlog_2026-07-12.org  PLAN_ghanasps_cleanup.org  PLAN_sample_v_migration.org  POPULATION_STATEMENTS_2026-07-21.org  REGRESSION_use_parquet_2026-04-09.org  (+14 more)
tests/: __init__.py  conftest.py  generate_baseline.py  test_age_handler.py  (+118 more)
(+11595 files in other folders)
