[project]
name = "LSMS_Library"
version = "0.4.0"
description = "Abstraction layer for Living Standards Measurement Survey data"
authors = [ {name = "Ethan Ligon", email = "ligon@berkeley.edu"}
    ]
license = {text = "CC-BY-4.0"}
readme = "README.org"
requires-python = ">=3.11, <4.0"
dependencies = ["pandas >=2.2, <3.0",
             "CFEDemands>=0.7.0",
             "PyYAML >=6.0,<7.0",
             "python-gnupg >=0.5,<1.0",
             "scikit-learn (>=1.7.0,<2.0.0)",
             "lsms (>=0.4.13,<0.5.0)",
             "dvc[s3] (>=3.67.0,<4.0.0)",
             "pyarrow (>=21.0.0,<22.0.0)",
             "pyreadstat (>=1.3.0,<2.0.0)",
             "openai (>=1.99.5,<2.0.0)",
            "ligonlibrary (>=0.2.0)",
             "python-Levenshtein (>=0.27.3,<0.28.0)",
             "typer (>=0.12.0,<1.0.0)",
             "fooddatacentral (>=1.0.10,<2.0.0)",
             "pint (>=0.25.2,<0.26.0)",
             "platformdirs (>=4.0.0,<5.0.0)"]

[project.scripts]
lsms-library = "lsms_library.cli:main"

[tool-poetry]


[project-urls]
repository = "https://github.com/ligon/LSMS_Library"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
ipython = "^9.4.0"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
